# coco-guest-components

./: Cargo.toml  build_gcs.sh
api-server-rest/: Cargo.toml
api-server-rest/protos/: attestation_agent.proto  confidential_data_hub.proto
api-server-rest/src/: aa.rs  cdh.rs  main.rs  router.rs  utils.rs
api-server-rest/src/ttrpc_proto/: attestation_agent.rs  confidential_data_hub.rs  confidential_data_hub_ttrpc.rs
attestation-agent/app/: Cargo.toml
attestation-agent/app/src/rpc/attestation/: mod.rs
attestation-agent/app/src/rpc/getresource/: mod.rs
attestation-agent/app/src/rpc/keyprovider/: message.rs  mod.rs
attestation-agent/app/src/rpc/ttrpc_protocol/: attestation_agent.rs  getresource.rs  keyprovider.rs  keyprovider_ttrpc.rs
attestation-agent/attester/: Cargo.toml
attestation-agent/attester/src/: extra_credential.rs  lib.rs  types.rs
attestation-agent/attester/src/az_snp_vtpm/: mod.rs
attestation-agent/attester/src/cca/: mod.rs
attestation-agent/attester/src/csv/: mod.rs
attestation-agent/attester/src/emulate/: mod.rs
attestation-agent/attester/src/sample/: mod.rs
attestation-agent/attester/src/sgx_dcap/: mod.rs
attestation-agent/attester/src/snp/: mod.rs
attestation-agent/attester/src/tdx/: mod.rs
attestation-agent/kbc/: Cargo.toml
attestation-agent/kbc/src/: lib.rs
attestation-agent/kbc/src/cc_kbc/: mod.rs
attestation-agent/kbc/src/eaa_kbc/: mod.rs
attestation-agent/kbc/src/offline_fs_kbc/: mod.rs
attestation-agent/kbc/src/offline_sev_kbc/: mod.rs
attestation-agent/kbc/src/online_sev_kbc/: mod.rs
attestation-agent/kbc/src/sample_kbc/: mod.rs
attestation-agent/kbs_protocol/: Cargo.toml
attestation-agent/kbs_protocol/src/: api.rs  jwe.rs  keypair.rs  lib.rs
attestation-agent/kbs_protocol/src/client/: rcar_client.rs  token_client.rs
attestation-agent/kbs_protocol/src/evidence_provider/: mock.rs  mod.rs  native.rs
attestation-agent/kbs_protocol/src/token_provider/: mod.rs  test.rs
attestation-agent/kbs_protocol/src/token_provider/aa/: attestation_agent.rs  mod.rs
attestation-agent/lib/: Cargo.toml
attestation-agent/lib/src/: lib.rs  token.rs
attestation-agent/protos/: attestation-agent.proto  getresource.proto
confidential-data-hub/hub/: Cargo.toml
confidential-data-hub/hub/protos/: api.proto
confidential-data-hub/hub/src/: api.rs  error.rs  hub.rs
confidential-data-hub/hub/src/auth/: kbs.rs  sev.rs
confidential-data-hub/kms/: Cargo.toml
confidential-data-hub/kms/src/: api.rs  error.rs  lib.rs
confidential-data-hub/kms/src/plugins/: mod.rs
confidential-data-hub/kms/src/plugins/kbs/: cc_kbc.rs  mod.rs  offline_fs.rs
confidential-data-hub/kms/src/plugins/kbs/resource/: local_fs.rs  mod.rs
confidential-data-hub/kms/src/plugins/kbs/sev/: client.rs
confidential-data-hub/kms/src/plugins/kbs/verifier/: mod.rs  types.rs
confidential-data-hub/kms/src/plugins/kbs/verifier/challenge/: mod.rs
confidential-data-hub/kms/src/plugins/kbs/verifier/snp/: genoa_ask_ark.pem  mod.rs
confidential-data-hub/secret/: Cargo.toml
confidential-data-hub/secret/src/secret/: mod.rs
confidential-data-hub/secret/src/secret/layout/: vault.rs
image-rs/: Cargo.toml
image-rs/src/: decrypt.rs  image.rs  lib.rs  pull.rs  stream.rs  unpack.rs
image-rs/src/auth/: mod.rs
image-rs/src/extra/: controller.rs  mod.rs  token.rs
image-rs/src/resource/: mod.rs
image-rs/src/resource/kbs/: grpc.rs  mod.rs  native.rs  ttrpc.rs
image-rs/src/signature/: mod.rs
image-rs/src/signature/mechanism/: mod.rs
image-rs/src/signature/mechanism/cosign/: mod.rs
image-rs/src/signature/mechanism/simple/: mod.rs
image-rs/src/signature/policy/: mod.rs  policy_requirement.rs
ocicrypt-rs/: Cargo.toml
ocicrypt-rs/src/: encryption.rs  lib.rs  token.rs
ocicrypt-rs/src/keywrap/: jwe.rs  keyprovider.rs  mod.rs
ocicrypt-rs/src/utils/grpc/: keyprovider.rs
ocicrypt-rs/src/utils/ttrpc/: keyprovider_ttrpc.rs
test/: test.sh
