[package]
name = "kms"
version = "0.1.0"
authors = ["The Confidential Container Authors"]
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bincode = { workspace = true }
chrono = { workspace = true, optional = true }
const_format.workspace = true
crypto = { path = "../../attestation-agent/deps/crypto", optional = true }
hex = { workspace = true, optional = true }
kbs_protocol = { path = "../../attestation-agent/kbs_protocol", default-features = false, features = ["passport", "aa_token", "openssl"], optional = true }
lazy_static.workspace = true
log.workspace = true
openssl = { workspace = true, optional = true }
p12 = { version = "0.6.3", optional = true }
prost = { workspace = true, optional = true }
resource_uri = { path = "../../attestation-agent/deps/resource_uri" }
sha2 = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
#sev = { path = "../../attestation-agent/deps/sev", optional = true }
strum.workspace = true
reqwest = { version = "0.11", optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
toml.workspace = true
tonic = { workspace = true, optional = true }
uuid = { workspace = true, features = ["serde", "v4"], optional = true }
yasna = { version = "0.5.2", optional = true }
zeroize = { workspace = true, optional = true }
slog = "2.5.2"
slog-scope = "4.1.2"
slog-term = "2.9.0"
attester = { path = "../../attestation-agent/attester", default-features = false }
kbs-types = { path = "../../../virtee-kbs-types"}
#kbs = { path = "../../../coco-trustee"}
#as-types = {path = "../../../coco-attestation-service/as-types"}
#attestation-service = { path = "../../../coco-attestation-service/attestation-service", default-features = false, optional = true }
#attestation-service = { path = "../../../coco-attestation-service/attestation-service" }
strum_macros = "0.24.0"
cfg-if = "1.0.0"
jwt-simple = "0.11.6"
x509-parser = { version = "0.14.0", optional = true }
asn1-rs = { version = "0.5.1", optional = true }
#sev = { version = "1.2.0", features = ["openssl", "snp"], optional = true }
sev = "1.2.0"

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["rt", "macros" ] }

[build-dependencies]
anyhow.workspace = true
tonic-build.workspace = true

[features]
default = ["aliyun", "kbs"]

aliyun = ["chrono", "hex", "openssl", "p12", "prost", "reqwest/rustls-tls", "sha2", "tonic", "yasna"]
kbs = ["kbs_protocol"]
#snp-verifier = [ "asn1-rs", "openssl", "sev", "x509-parser" ]
snp-verifier = [ "asn1-rs", "openssl", "x509-parser" ]
#sev = ["bincode", "crypto", "dep:sev", "prost", "tonic", "uuid", "zeroize"]
